Squash bugs

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,7 +52,7 @@ footer {
   padding-top: 48px;
   text-align: center;
   border-top: 1px solid $graphite-light80;
-  margin-top: 160px;
+  margin: 160px auto 0;
   font-size: 12px;
   font-weight: 600;
 }
