--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,7 +9,7 @@ $green:							#00c800;
 $yellow:						#febf02;
 $red:								#fb0807;
 $orange:						#ff8900;
-$graphite:					#fe5ebd;
+$pink:							#fe5ebd;
 $purple:						#9c00fe;
 
 
